--- a/01_learn_scope/index.html
+++ b/01_learn_scope/index.html
@@ -1,23 +1,18 @@
-<!--
- * @Author: your name
- * @Date: 2021-10-22 12:25:28
- * @LastEditTime: 2021-10-22 12:25:48
- * @LastEditors: your name
- * @Description: In User Settings Edit
- * @FilePath: \邂逅js高级\01_learn_scope\index.html
--->
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
-
 <body>
-    <script src="./1.execution_code.js"></script>
-</body>
+  
+  <!-- <script src="./main.js"></script> -->
+  <!-- <script src="./02_全局代码执行顺序.js"></script> -->
 
+  <!-- <script src="./03_全局代码执行过程(函数).js"></script> -->
+  <!-- <script src="./04_全局代码执行过程(函数嵌套).js"></script> -->
+  <script src="./05_函数调用函数执行过程.js"></script>
+</body>
 </html>
