js闭包和内存管理

--- a/02_作用域面试题/index.html
+++ b/02_作用域面试题/index.html
@@ -1,8 +1,8 @@
 <!--
  * @Author: your name
  * @Date: 2021-10-25 20:13:31
- * @LastEditTime: 2021-10-25 20:13:40
- * @LastEditors: your name
+ * @LastEditTime: 2021-10-28 09:36:36
+ * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \邂逅js高级\index.html
 -->
@@ -18,7 +18,7 @@
 
 <body>
 
-  <script src="./01_作用域面试题一.js"></script>
+  <!-- <script src="./01_作用域面试题一.js"></script> -->
 </body>
 
 </html>
