js高级的this指向相关

--- a/05_闭包内存泄露/index.html
+++ b/05_闭包内存泄露/index.html
@@ -1,10 +1,10 @@
 <!--
  * @Author: your name
- * @Date: 2021-10-25 20:13:31
- * @LastEditTime: 2021-10-28 17:13:13
+ * @Date: 2021-10-28 17:13:05
+ * @LastEditTime: 2021-10-28 20:27:02
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
- * @FilePath: \邂逅js高级\index.html
+ * @FilePath: \邂逅js高级\05_闭包内存泄露\index.html
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -18,7 +18,8 @@
 
 <body>
 
-  <!-- <script src="./01_作用域面试题一.js"></script> -->
+  <!-- <script src="./01_js闭包内存泄露案例.js"></script> -->
+  <script src="./02_js闭包引用的自由变量销毁.js"></script>
 </body>
 
 </html>
