--- a/07_this其他补充/index.html
+++ b/07_this其他补充/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2021-10-29 18:52:22
- * @LastEditTime: 2021-10-29 19:44:52
+ * @LastEditTime: 2021-10-29 23:50:23
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \邂逅js高级\07_this其他补充\index.html
@@ -34,12 +34,12 @@
   <!-- <script src="./05_特殊绑定-忽略显示绑定.js"></script> -->
   <!-- <script src="./06_特殊绑定-间接函数引用.js"></script> -->
   <!-- <script src="./08_箭头函数的this绑定.js"></script> -->
-
+  <script src="./08_箭头函数的this获取.js"></script>
   <!-- <script src="./09_this面试题一.js"></script> -->
   <!-- <script src="./10_this面试题二.js"></script> -->
   <!-- <script src="./11_this面试题三.js"></script> -->
   <!-- <script src="./12_this面试题四.js"></script> -->
-  <script src="./测试代码.js"></script>
+  <!-- <script src="./测试代码.js"></script> -->
 </body>
 
 </html>
