--- a/08_call-apply-bind/index.html
+++ b/08_call-apply-bind/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2021-10-30 09:37:38
- * @LastEditTime: 2021-10-31 10:35:55
+ * @LastEditTime: 2021-11-05 12:45:21
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \邂逅js高级\08_call-apply-bind\index.html
@@ -21,10 +21,10 @@
   <!-- <script src="./01_call函数的实现.js"></script> -->
   <!-- <script src="./03_apply函数的实现.js"></script> -->
   <!-- <script src="./04_bind函数的实现.js"></script> -->
-  <script src="./04_bind.js"></script>
+  <!-- <script src="./04_bind.js"></script> -->
   <!-- <script src="./05_arguments基本使用.js"></script> -->
   <!-- <script src="./06_arguments转array.js"></script> -->
-  <!-- <script src="./07_箭头函数中没有arguments.js"></script> -->
+  <script src="./07_箭头函数中没有arguments.js"></script>
 </body>
 
 </html>
